[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pin-pink"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "loop-rate-limiters >=0.1.0",
    "numpy >=1.19.0",
    "pin >=2.6.3",
    "qpsolvers >=4.3.1",
    "quadprog >=0.1.11",
]
keywords = ["inverse", "kinematics", "pinocchio"]

[project.urls]
Documentation = "https://stephane-caron.github.io/pink/"
Source = "https://github.com/stephane-caron/pink"
Tracker = "https://github.com/stephane-caron/pink/issues"
Changelog = "https://github.com/stephane-caron/pink/blob/main/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "pink"

[tool.ruff]
line-length = 79
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.pydocstyle]
convention = "google"
